Docs: publish site for 0.8.0

--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -584,6 +584,14 @@ qh<span class="w"> </span>--help
 <div class="codehilite"><pre><span></span><code>qh<span class="w"> </span>mongo.log<span class="w"> </span>--error
 </code></pre></div>
 
+<p>Show only warnings:</p>
+<div class="codehilite"><pre><span></span><code>qh<span class="w"> </span>mongo.log<span class="w"> </span>--warn
+</code></pre></div>
+
+<p>Include warnings together with errors/fatals:</p>
+<div class="codehilite"><pre><span></span><code>qh<span class="w"> </span>mongo.log<span class="w"> </span>--error<span class="w"> </span>--warn
+</code></pre></div>
+
 
 
 
